add swagger for other apis
