# docs/swagger.json
@@ -18,6 +18,80 @@
     "host": "karchu.onrender.com",
     "basePath": "/v1",
     "paths": {
+        "/categories/all": {
+            "post": {
+                "description": "returns array of categories",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Get categories of user",
+                "parameters": [
+                    {
+                        "description": "enter Email,Password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.UserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list of categories",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/n": {
+            "post": {
+                "description": "returns array of categories",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Get categories of user",
+                "parameters": [
+                    {
+                        "description": "enter Email,Password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.UserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list of categories",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/": {
             "post": {
                 "description": "creates a user",
@@ -54,7 +128,7 @@
         },
         "/user/auth": {
             "post": {
-                "description": "authorizes given user credentials",
+                "description": "returns userId",
                 "consumes": [
                     "application/json"
                 ],
@@ -78,9 +152,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "User Id",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessRes"
+                            "type": "int"
                         }
                     }
                 }
